src/test/deca/context/valid/personalTests/exp.deca
{
float a = 5.0;
float b = 3.0;
b = a / b;
print(b);
}