src/test/deca/context/invalid/personalTests/incompatible_initialisation2.deca
{
    null a = 3.14;
}